--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
   <h1>Pets</h1>
 {% for pet in pets %}
 {% if pet.available %}
-  <div>
+  <div class="pet-info">
     <img src="{{pet.photo_url}}" alt="photo of {{pet.name}} the {{pet.species}}">
     <caption>{{pet.name}} is <b>available</b>!</caption>
   </div>
