finish part one

--- a/templates/add-pet-form.html
+++ b/templates/add-pet-form.html
@@ -20,7 +20,8 @@
   {% endfor %}
 
   <button type="submit">Add</button>
-  <button formaction="/" formmethod="GET">Cancel</button>
+  <a href="/"><button >Cancel</button></a>
+  <!-- why is it not working? -->
 </form>
 
 {% endblock %}
